# Rust_Book

./: LICENSE  README.md
bash_script/: Cargo.toml
bash_script/src/: constants.rs  main.rs
chapter_1/src/: main.rs
chapter_11/src/: lib.rs
chapter_11/tests/: integration_test.rs
chapter_13/src/: lib.rs  main.rs
chapter_14/: Cargo.toml
chapter_14/adder/src/: main.rs
chapter_15/: Cargo.toml
chapter_15/src/: main.rs
chapter_16/: Cargo.toml
chapter_16/src/: lib.rs  main.rs
chapter_16/src/blog/: post.rs
chapter_19/: Cargo.toml
chapter_19/src/: main.rs
chapter_2/src/: main.rs
chapter_3/src/: main.rs
chapter_5/src/: main.rs
chapter_7/src/: front_of_house.rs  main.rs
chapter_8/src/: main.rs
chapter_9/src/: main.rs
minigrep/src/: lib.rs  main.rs
web_server/: 404.html  hello.html
web_server/src/: lib.rs
