[package]
name = "bash_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
chrono = "0.4.19"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
substring = "1.4.5"
